@@ -26,6 +26,7 @@ set -e
 # These two names need to be aligned with app1/app2 in the k8s.
 SERVICE1="svc1-canary90"
 SERVICE2="svc2-prod10"
+URLMAP_NAME="http-svc9010-lb"
 ########################
 # Add your code here
 ########################
@@ -40,44 +41,40 @@ proceed_if_error_matches "global/healthChecks/http-neg-check' already exists" \
 
 # create backend for the V1 of the whereami application
 proceed_if_error_matches "The resource 'projects/$PROJECT_ID/global/backendServices/$SERVICE1' already exists" \
-    gcloud compute backend-services create $SERVICE1 \
+    gcloud compute backend-services create "$SERVICE1" \
         --load-balancing-scheme=EXTERNAL_MANAGED \
         --protocol=HTTP \
         --port-name=http \
         --health-checks=http-neg-check \
         --global
 
-# grab the names of the NEGs for $SERVICE1
-gcloud compute network-endpoint-groups list --filter="$SERVICE1"
+# grab the names of the NEGs for $SERVICE1. This should produce 3 lines like this:
+# $ gcloud compute network-endpoint-groups list --filter=svc1-canary90
+# NAME                                              LOCATION        ENDPOINT_TYPE   SIZE
+# k8s1-3072c6bd-canary-svc1-canary90-8080-7bc34067  europe-west6-b  GCE_VM_IP_PORT  0
+# k8s1-3072c6bd-canary-svc1-canary90-8080-7bc34067  europe-west6-c  GCE_VM_IP_PORT  1
+# k8s1-3072c6bd-canary-svc1-canary90-8080-7bc34067  europe-west6-a  GCE_VM_IP_PORT  0
 
-echo DELETEME so far so good.
+SVC1_UGLY_NEG_NAME=$(gcloud compute network-endpoint-groups list --filter="$SERVICE1" | grep "$REGION" | awk '{print $1}' | head -1)
 
-exit 0
+echo "NEG1 Found: $(yellow $SVC1_UGLY_NEG_NAME)."
 
 # add the first backend with NEGs from the canary-$SERVICE1 (EXAMPLE BELOW)
-gcloud compute backend-services add-backend $SERVICE1 \
-        --network-endpoint-group=k8s1-8ac5360b-canary-$SERVICE1-8080-3fe8fae3 \
-        --network-endpoint-group-zone=$REGION-b \
-        --balancing-mode=RATE \
-        --max-rate-per-endpoint=10 \
-        --global
+# Lets assume the zones are A B C
+for ITERATIVE_ZONE in $REGION-a $REGION-b $REGION-c ; do 
+  proceed_if_error_matches "Duplicate network endpoint groups in backend service." \
+    gcloud compute backend-services add-backend $SERVICE1 \
+            --network-endpoint-group=$SVC1_UGLY_NEG_NAME \
+            --network-endpoint-group-zone="$ITERATIVE_ZONE" \
+            --balancing-mode=RATE \
+            --max-rate-per-endpoint=10 \
+            --global
+done
 
-gcloud compute backend-services add-backend $SERVICE1 \
-        --network-endpoint-group=k8s1-8ac5360b-canary-$SERVICE1-8080-3fe8fae3 \
-        --network-endpoint-group-zone=$REGION-c \
-        --balancing-mode=RATE \
-        --max-rate-per-endpoint=10 \
-        --global
-
-gcloud compute backend-services add-backend $SERVICE1 \
-        --network-endpoint-group=k8s1-8ac5360b-canary-$SERVICE1-8080-3fe8fae3 \
-        --network-endpoint-group-zone=$REGION-a \
-        --balancing-mode=RATE \
-        --max-rate-per-endpoint=10 \
-        --global
 
 # create backend for the V2 of the whereami application
-gcloud compute backend-services create $SERVICE2 \
+proceed_if_error_matches "The resource 'projects/$PROJECT_ID/global/backendServices/$SERVICE2' already exists" \
+  gcloud compute backend-services create "$SERVICE2" \
     --load-balancing-scheme=EXTERNAL_MANAGED \
     --protocol=HTTP \
     --port-name=http \
@@ -85,47 +82,73 @@ gcloud compute backend-services create $SERVICE2 \
     --global
 
 # grab the names of the NEGs for $SERVICE1
-gcloud compute network-endpoint-groups list --filter="canary-$SERVICE2"
+#gcloud compute network-endpoint-groups list --filter="canary-$SERVICE2"
+#gcloud compute network-endpoint-groups list --filter="$SERVICE1" | grep "$REGION" | awk '{print $1}' | head -1
+SVC2_UGLY_NEG_NAME=$(gcloud compute network-endpoint-groups list --filter="$SERVICE2" | grep "$REGION" | awk '{print $1}' | head -1)
+
+echo "NEG2 Found: $(yellow $SVC2_UGLY_NEG_NAME)."
 
 # add the first backend with NEGs from the canary-$SERVICE2 (EXAMPLE BELOW)
-gcloud compute backend-services add-backend $SERVICE2 \
-        --network-endpoint-group=k8s1-8ac5360b-canary-$SERVICE2-8080-a4d133a9 \
-        --network-endpoint-group-zone=$REGION-b \
-        --balancing-mode=RATE \
-        --max-rate-per-endpoint=10 \
-        --global
+for ITERATIVE_ZONE in $REGION-a $REGION-b $REGION-c ; do 
+  proceed_if_error_matches "Duplicate network endpoint groups in backend service." \
+    gcloud compute backend-services add-backend "$SERVICE2" \
+      --network-endpoint-group="$SVC2_UGLY_NEG_NAME" \
+      --network-endpoint-group-zone="$ITERATIVE_ZONE" \
+      --balancing-mode=RATE \
+      --max-rate-per-endpoint=10 \
+      --global
+done
 
-gcloud compute backend-services add-backend $SERVICE2 \
-        --network-endpoint-group=k8s1-8ac5360b-canary-$SERVICE2-8080-a4d133a9 \
-        --network-endpoint-group-zone=$REGION-c \
-        --balancing-mode=RATE \
-        --max-rate-per-endpoint=10 \
-        --global
-
-gcloud compute backend-services add-backend $SERVICE2 \
-        --network-endpoint-group=k8s1-8ac5360b-canary-$SERVICE2-8080-a4d133a9 \
-        --network-endpoint-group-zone=$REGION-a \
-        --balancing-mode=RATE \
-        --max-rate-per-endpoint=10 \
-        --global
 
 # Create a default url-map
-gcloud compute url-maps create http-whereami-lb --default-service $SERVICE1
+gcloud compute url-maps create "$URLMAP_NAME" --default-service "$SERVICE1"
 
-# Import traffic-split url-map
-gcloud compute url-maps import http-whereami-lb --source=urlmap-split.yaml
+# Import traffic-split url-map (from file)
+#gcloud compute url-maps import "$URLMAP_NAME" --source='k8s/xlb-gfe3-traffic-split/step2/urlmap-split.yaml'
+
+# Import traffic-split url-map (from STDIN - so templating is trivially obvious)
+cat <<END_OF_URLMAP_GCLOUD_YAML_CONFIG
+# This comment will be lost in a bash pipe, like tears in the rain...
+defaultService: https://www.googleapis.com/compute/v1/projects/$PROJECT_ID/global/backendServices/svc1-canary90
+hostRules:
+- hosts:
+  - xlb-gfe3-host.example.io
+  - xlb-gfe3.$MY_DOMAIN
+  pathMatcher: path-matcher-1
+pathMatchers:
+- defaultRouteAction:
+    faultInjectionPolicy:
+      abort:
+        httpStatus: 503
+        percentage: 100.0
+    weightedBackendServices:
+    - backendService: https://www.googleapis.com/compute/v1/projects/$PROJECT_ID/global/backendServices/svc1-canary90
+      weight: 1
+  name: path-matcher-1
+  routeRules:
+  - matchRules:
+    - prefixMatch: /
+    priority: 1
+    routeAction:
+      weightedBackendServices:
+      - backendService: https://www.googleapis.com/compute/v1/projects/$PROJECT_ID/global/backendServices/svc1-canary90
+        weight: 90
+      - backendService: https://www.googleapis.com/compute/v1/projects/$PROJECT_ID/global/backendServices/svc2-prod10
+        weight: 10
+END_OF_URLMAP_GCLOUD_YAML_CONFIG | 
+    gcloud compute target-http-proxies create "$URLMAP_NAME" --url-map=- 
+# "$URLMAP_NAME"
 
 # Finalize
-gcloud compute target-http-proxies create http-whereami-lb --url-map=http-whereami-lb
 gcloud compute forwarding-rules create http-content-rule \
     --load-balancing-scheme=EXTERNAL_MANAGED \
     --global \
-    --target-http-proxy=http-whereami-lb  \
+    --target-http-proxy="$URLMAP_NAME" \
     --ports=80
 
 
-kubectl apply -f k8s/xlb-gfe3-traffic-split/step2/
-
+# SBAJJATO
+#kubectl apply -f k8s/xlb-gfe3-traffic-split/step2/
 
 
 
