@@ -1,10 +1,13 @@
 # TODO change `cicd-platinum-test001` to PROJECT_ID
 # TODO change `palladius.it` to $MY_DOMAIN (which I just added to .env.sh and dist :] )
+
+#### OPK questo NON e' k8s e' gcloud
+
 defaultService: https://www.googleapis.com/compute/v1/projects/cicd-platinum-test001/global/backendServices/svc1-canary90
 hostRules:
 - hosts:
   - xlb-gfe3-host.example.io
-  - xlb-gfe3.palladius.it
+  - xlb-gfe3.palladius.it # TODO .$MY_DOMAIN
   pathMatcher: path-matcher-1
 pathMatchers:
 - defaultRouteAction:
