@@ -1,2 +1,3 @@
 
+* 2022-07-05 v0.3 Nearly all working. GKE setup for GFE with traffic splitting (solution 2) about to work. (close enough)
 * 2022-05-24 v0.2 Finally Cloud Build is set up.
